[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ui-theme/font_large.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/menu/CreditsPopup.gd" type="Script" id=2]
[ext_resource path="res://ui/ui-theme/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/menu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://ui/ui-theme/panel_style_popup.tres" type="StyleBox" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -64.0
margin_right = 512.0
margin_bottom = -8.0
grow_vertical = 0
text = "v0.3.0-alpha"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="RichTextLabel" parent="."]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.5
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][/center]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -120.0
margin_right = 120.0
grow_horizontal = 2
theme = ExtResource( 3 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 35.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 240.0
margin_bottom = 80.0
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 240.0
margin_bottom = 125.0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 240.0
margin_bottom = 170.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPopup" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CreditsPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = -286.0
margin_right = 430.0
margin_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsPopup/Panel"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -66.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
bbcode_enabled = true
bbcode_text = "[center]A [url=https://ldjam.com/events/ludum-dare/48/planet-ld48b]Ludum Dare 48[/url] game

Art, animation
Zoe Anslow Gwilliam

Music, sound design
Marek Domagała

Programming, creative direction
Outfrost

Level design, programming
666Savior
[/center]"
text = "A Ludum Dare 48 game

Art, animation
Zoe Anslow Gwilliam

Music, sound design
Marek Domagała

Programming, creative direction
Outfrost

Level design, programming
666Savior
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CreditsPopup/Panel"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -66.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
bbcode_enabled = true
bbcode_text = "[center]










Font by
Poppy Works
CC BY 4.0

Godot Engine 3.3[/center]"
text = "










Font by
Poppy Works
CC BY 4.0

Godot Engine 3.3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="CreditsPopup/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -50.0
margin_right = -16.0
margin_bottom = -16.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsPopup" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ControlsPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = -286.0
margin_right = 430.0
margin_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ControlsPopup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -66.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
bbcode_enabled = true
bbcode_text = "Keyboard and mouse controls:

Move                           W A S D   ↑ ← ↓ →
Attack                        Space Enter Mouse1
Use                            F L
Cycle attack modifiers      Q E   [ ]

Reset game and go back to menu     Backspace

Gamepad controls:

Move                           Left stick
Attack                        L2 R2
Use                            A
Cycle attack modifiers      L1 R1"
text = "Keyboard and mouse controls:

Move                           W A S D   ↑ ← ↓ →
Attack                        Space Enter Mouse1
Use                            F L
Cycle attack modifiers      Q E   [ ]

Reset game and go back to menu     Backspace

Gamepad controls:

Move                           Left stick
Attack                        L2 R2
Use                            A
Cycle attack modifiers      L1 R1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="ControlsPopup/Panel"]
visible = false
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -66.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="ControlsPopup/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -50.0
margin_right = -16.0
margin_bottom = -16.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
